(lang dune 2.9)
(name learning_interpreters)

(source (github pdarragh/ocaml-learning-interpreters))
(license MIT)
(authors "Pierce Darragh <pierce.darragh@gmail.com>")
(maintainers "Pierce Darragh <pierce.darragh@gmail.com>")
(homepage "https://github.com/pdarragh/ocaml-learning-interpreters")
(documentation "https://github.com/pdarragh/ocaml-learning-interpreters")
